<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBD3"
    tools:context=".ui.onBoarding.OnBoardingFragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_onboarding_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/mbold"
            android:text="@string/title_onboarding_3"
            android:textColor="#083D77"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_onboarding_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/mreguler"
            android:text="@string/desc_onboarding_3"
            android:textColor="#083D77" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="#EBEBD3"
            android:contentDescription="@string/onboarding_fragment3"
            android:scaleType="fitEnd"
            android:src="@drawable/sign3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>