<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBD3"
    tools:context=".ui.onBoarding.OnBoardingActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:background="#EBEBD3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager2.widget.ViewPager2>

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/worm_dots_indicator"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:dotsColor="@color/black"
        app:dotsCornerRadius="8dp"
        app:dotsSize="10dp"
        app:dotsSpacing="4dp"
        app:dotsStrokeColor="@color/black"
        app:dotsStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/corner_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worm_dots_indicator"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tv_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/pbold"
            android:text="@string/application_title"
            android:textColor="#083D77"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label"
            app:layout_constraintStart_toEndOf="@+id/tv_label"
            app:layout_constraintTop_toTopOf="@+id/tv_label"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/pregular"
            android:text="@string/label_1"
            android:textColor="#083D77"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/pregular"
            android:text="@string/label_desc_1"
            android:textColor="#083D77"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_label" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#083D77"
            android:fontFamily="@font/pregular"
            android:paddingVertical="10dp"
            android:shadowColor="@color/black"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/pregular"
            android:paddingVertical="10dp"
            android:shadowColor="@color/black"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#083D77"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="#083D77"
            app:strokeWidth="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>